--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,103 +15,101 @@ import Button from "../components/Button.astro";
       </section>
 
       <!-- SEKTION 1 -->
-        <section
-          id="sektion1"
-          class="lg:mx-20 mx-5 grid grid-cols-1 sm:grid-cols-2 lg:pt-14 lg:pb-20"
-        >
-          <div
-            class="p-4 flex items-center justify-center col-span-1 sm:order-1"
-          >
-            <img
-              src="unsure.svg"
-              alt="unsure.svg"
-              class="w-32 sm:w-60"
-              style="max-width: 100%; height: auto;"
-            />
+      <section
+        id="sektion1"
+        class="lg:mx-20 mx-5 grid grid-cols-1 sm:grid-cols-2 lg:pt-14 lg:pb-20"
+      >
+        <div class="p-4 flex items-center justify-center col-span-1 sm:order-1">
+          <img
+            src="unsure.svg"
+            alt="unsure.svg"
+            class="w-32 sm:w-60"
+            style="max-width: 100%; height: auto;"
+          />
+        </div>
+        <div class="p-4 flex flex-col justify-center col-span-1 sm:order-2">
+          <div>
+            <h2
+              class="text-[#7E2512] text-3xl text-center lg:text-5xl lg:text-left"
+            >
+              Hvad er digitalt skrald?
+            </h2>
+            <p class="py-10 prose text-[#7E2512]">
+              Digitalt affald, eller e-affald, er ikke kun begrænset til de
+              fysiske enheder, der samler støv i vores skabe. Det omfatter også
+              de data og digitale fodafbry vi efterlader i skyen, når vi
+              opdaterer vores enheder, sletter filer eller dropper gamle apps og
+              konti.
+              <br /><br />
+              Forestil dig, hvor meget digitalt affald der ligger og flyder i skyen
+              – gamle dokumenter, billeder og filer, vi aldrig ser igen. Men det
+              stopper ikke der. Disse data og digitale efterladenskaber udgør ikke
+              kun en trussel mod vores privatliv og sikkerhed, men de fylder også
+              de virtuelle landskaber med overflødige bytes og bits. <br />
+              Det er på tide at rydde op i skyen og give plads til det nye. <br
+              /><br />
+              Så lad os alle sammen gå på en digital oprydningsmission og skabe en
+              sky, der er lys og klar til fremtiden!
+            </p>
           </div>
-          <div class="p-4 flex flex-col justify-center col-span-1 sm:order-2">
-            <div>
-              <h2
-                class="text-[#7E2512] text-3xl text-center lg:text-5xl lg:text-left"
-              >
-                Hvad er digitalt skrald?
-              </h2>
-              <p class="py-10 prose text-[#7E2512]">
-                Digitalt affald, eller e-affald, er ikke kun begrænset til de
-                fysiske enheder, der samler støv i vores skabe. Det omfatter
-                også de data og digitale fodafbry vi efterlader i skyen, når vi
-                opdaterer vores enheder, sletter filer eller dropper gamle apps
-                og konti.
-                <br /><br />
-                Forestil dig, hvor meget digitalt affald der ligger og flyder i skyen
-                – gamle dokumenter, billeder og filer, vi aldrig ser igen. Men det
-                stopper ikke der. Disse data og digitale efterladenskaber udgør ikke
-                kun en trussel mod vores privatliv og sikkerhed, men de fylder også
-                de virtuelle landskaber med overflødige bytes og bits. <br />
-                Det er på tide at rydde op i skyen og give plads til det nye. <br
-                /><br />
-                Så lad os alle sammen gå på en digital oprydningsmission og skabe
-                en sky, der er lys og klar til fremtiden!
-              </p>
-            </div>
-          </div>
-        </section>
+        </div>
+      </section>
 
       <!-- SEKTION 2 -->
-        <section
-          id="sektion2"
-          class="lg:mx-20 mx-5 grid grid-cols-1 sm:grid-cols-2"
-        >
-          <div
-            class="p-4 flex flex-col justify-center
+      <section
+        id="sektion2"
+        class="lg:mx-20 mx-5 grid grid-cols-1 sm:grid-cols-2"
+      >
+        <div
+          class="p-4 flex flex-col justify-center
        col-span-1 sm:order-1"
-          >
-            <div>
-              <h2
-                class="text-[#3C4A30] text-3xl text-center lg:text-5xl lg:text-left"
+        >
+          <div>
+            <h2
+              class="text-[#3C4A30] text-3xl text-center lg:text-5xl lg:text-left"
+            >
+              Hvad er problemet med digitalt skrald?
+            </h2>
+            <p class="py-10 prose text-[#3C4A30]">
+              I den digitale verden, ophobes der en enorm mængdedigitalt affald,
+              som har store konsekvenser for kloden. <br /><br />
+              Unødvendige e-mails, filer, apps og duplikater af fotos og videoer
+              bidrager til denne digitale forurening, der konstant forbruger energi
+              selv når de er glemt. Årligt genererer internettet og dets infrastruktur
+              over 900 millioner tons CO₂-emissioner. <br /><br />
+              At slette unødvendige digitale filer reducerer ikke kun CO₂-emissioner
+              markant, men forlænger også enhedernes levetid, bidrager til balance
+              og giver individet mulighed for at dyrke nye digitale vaner, hvilket
+              øger effektiviteten og tilfredsheden. <br /><br />
+              <span class="font-bold"
+                >Deltag i Digital Oprydningsdag og reducer dit klimaaftryk.</span
               >
-                Hvad er problemet med digitalt skrald?
-              </h2>
-              <p class="py-10 prose text-[#3C4A30]">
-                I den digitale verden, ophobes der en enorm mængdedigitalt
-                affald, som har store konsekvenser for kloden. <br /><br />
-                Unødvendige e-mails, filer, apps og duplikater af fotos og videoer
-                bidrager til denne digitale forurening, der konstant forbruger energi
-                selv når de er glemt. Årligt genererer internettet og dets infrastruktur
-                over 900 millioner tons CO₂-emissioner. <br /><br />
-                At slette unødvendige digitale filer reducerer ikke kun CO₂-emissioner
-                markant, men forlænger også enhedernes levetid, bidrager til balance
-                og giver individet mulighed for at dyrke nye digitale vaner, hvilket
-                øger effektiviteten og tilfredsheden. <br /><br />
-                <span class="font-bold"
-                  >Deltag i Digital Oprydningsdag og reducer dit klimaaftryk.</span
-                >
-              </p>
-            </div>
+            </p>
           </div>
-          <div
-            class="p-4 flex items-center justify-center col-span-1 sm:order-2 pb-16"
-          >
-            <img
-              src="earth.svg"
-              alt="earth-svg"
-              class="w-50 sm:w-90 lg:w-42"
-              style="max-width: 100%; height: auto;"
-            />
-          </div>
-        </section>
+        </div>
+        <div
+          class="p-4 flex items-center justify-center col-span-1 sm:order-2 pb-16"
+        >
+          <img
+            src="earth.svg"
+            alt="earth-svg"
+            class="w-50 sm:w-90 lg:w-42"
+            style="max-width: 100%; height: auto;"
+          />
+        </div>
+      </section>
 
       <!-- SEKTION 3 -->
       <section id="sektion3" class="w-full bg-[#D6D1BE]">
-          <Sektion3 />
-        </section>
+        <Sektion3 />
+      </section>
 
       <!-- SEKTION 4 -->
       <section id="sektion4">
-          <h2 class="text-[#7E2512] py-10 text-3xl text-center lg:text-5xl">
-            Hvordan kan digitalt skrald fjernes?
-          </h2>
-        
+        <h2 class="text-[#7E2512] py-10 text-3xl text-center lg:text-5xl">
+          Hvordan kan digitalt skrald fjernes?
+        </h2>
+
         <div class="mx-5 grid grid-cols-1">
           <p class="text-[#7E2512] lg:text-center">
             Lad os begive os ud på et digitalt oprydningseventyr for at frigøre
@@ -231,146 +229,145 @@ import Button from "../components/Button.astro";
           Med hver digital oprydningssession genopretter vi ikke kun lagerplads <br
           /> – vi puster nyt liv i vores enheder, øger ydeevnen og forbedrer vores
           digitale velbefindende. <br />
-          <br /> Lad os rulle ærmerne op og komme i gang med oprydningen!
+          <br />
+          <strong
+            >Lad os rulle ærmerne op og komme i gang med oprydningen!</strong
+          >
         </p>
       </div>
 
       <!-- SEKTION 5 -->
       <section id="sektion5" class="w-full">
-          <Sektion5 />
-        </section></a>
-
-      <!-- SEKTION 6 -->
-      <section id="sektion6" class="bg-[#D6D1BE]">
-        <a href="sektion6">
-          <h1
-            class="mb-8 text-[#7E2512] text-center pt-10 text-3xl lg:pt-16 lg:pb-14 lg:text-5xl"
-          >
-            Registrér din digitale oprydning
-          </h1>
-        </a>
-
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:pb-14">
-          <div class="p-4">
-            <img src="content.svg" alt="Cleaning" class="md:ml-48 md:w-2/3" />
-          </div>
-
-          <div>
-            <form class="lg:mx-20 mx-5 md:w-3/4 px-4">
-              <div class="mb-4 mt-4">
-                <label for="surname" class="block"></label>
-                <input
-                  type="text"
-                  id="surname"
-                  name="surname"
-                  placeholder="Fornavn*"
-                  class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
-                />
-              </div>
-
-              <div class="mb-4 mt-4">
-                <label for="lastname" class="block"></label>
-                <input
-                  type="text"
-                  id="lastname"
-                  name="lastname"
-                  placeholder="Efternavn*"
-                  class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
-                />
-              </div>
-
-              <div class="mb-4">
-                <label for="email" class="block"></label>
-                <input
-                  type="text"
-                  id="email"
-                  name="email"
-                  placeholder="E-mail adresse*"
-                  class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
-                />
-              </div>
-
-              <div class="mb-4">
-                <label for="organisation" class="block"></label>
-                <input
-                  type="text"
-                  id="organisation"
-                  name="organisation"
-                  placeholder="Virksomhed (valgfrit)"
-                  class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
-                />
-              </div>
-
-              <div class="mb-4">
-                <div
-                  class="bg-[#F3EFEA] border-none px-7 rounded-full flex items-center justify-between"
-                  style="border-color: #6B7280; border-width: 1px"
-                >
-                  <label for="quantity" class="mr-3 text-black"
-                    >Antal deltagere*</label
-                  >
-                  <input
-                    type="number"
-                    id="quantity"
-                    class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-black focus:border-2 focus:border-[#7E2512]"
-                    value="0"
-                    min="0"
-                  />
-                </div>
-              </div>
-
-              <div class="mb-4">
-                <div
-                  class="bg-[#F3EFEA] border-none border-2 px-7 rounded-full flex items-center justify-between"
-                  style="border-color: #6B7280; border-width: 1px"
-                >
-                  <label for="quantity" class="mr-3 text-black"
-                    >Slettet GB*</label
-                  >
-                  <input
-                    type="number"
-                    id="quantity"
-                    class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-black"
-                    value="0"
-                    min="0"
-                  />
-                </div>
-              </div>
-
-              <div class="pt-4">
-                <label for="terms" class="inline-flex items-center">
-                  <input
-                    type="checkbox"
-                    id="terms"
-                    class="rounded border-[#F3EFEA] focus:ring-0 text-[#7E2512]"
-                  />
-                  <span class="ml-2"
-                    >Jeg accepterer <u><a href="#">vilkårene</a></u>*</span
-                  >
-                </label>
-              </div>
-
-              <div class="my-5">
-                <label for="newsletter" class="inline-flex items-center">
-                  <input
-                    type="checkbox"
-                    id="newsletter"
-                    class="rounded border-[#F3EFEA] focus:border-2 focus:ring-0 text-[#7E2512]"
-                  />
-                  <span class="ml-2"
-                    >Jeg ønsker at tilmelde mig nyhedsbrevet fra World Cleanup
-                    Day</span
-                  >
-                </label>
-              </div>
-
-              <div class="mb-5 flex justify-center pb-10 lg:p-5">
-                <Button variant="primary" size="large">Indsend</Button>
-              </div>
-            </form>
-          </div>
-        </div>
+        <Sektion5 />
       </section>
     </article>
+
+    <!-- SEKTION 6 -->
+    <section id="sektion6" class="bg-[#D6D1BE]">
+      <h1
+        class="mb-8 text-[#7E2512] text-center pt-10 text-3xl lg:pt-16 lg:pb-14 lg:text-5xl"
+      >
+        Registrér din digitale oprydning
+      </h1>
+
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:pb-14">
+        <div class="p-4">
+          <img src="content.svg" alt="Cleaning" class="md:ml-48 md:w-2/3" />
+        </div>
+
+        <div>
+          <form class="lg:mx-20 mx-5 md:w-3/4 px-4">
+            <div class="mb-4 mt-4">
+              <label for="surname" class="block"></label>
+              <input
+                type="text"
+                id="surname"
+                name="surname"
+                placeholder="Fornavn*"
+                class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
+              />
+            </div>
+
+            <div class="mb-4 mt-4">
+              <label for="lastname" class="block"></label>
+              <input
+                type="text"
+                id="lastname"
+                name="lastname"
+                placeholder="Efternavn*"
+                class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
+              />
+            </div>
+
+            <div class="mb-4">
+              <label for="email" class="block"></label>
+              <input
+                type="text"
+                id="email"
+                name="email"
+                placeholder="E-mail adresse*"
+                class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
+              />
+            </div>
+
+            <div class="mb-4">
+              <label for="organisation" class="block"></label>
+              <input
+                type="text"
+                id="organisation"
+                name="organisation"
+                placeholder="Virksomhed (valgfrit)"
+                class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
+              />
+            </div>
+
+            <div class="mb-4">
+              <div
+                class="bg-[#F3EFEA] border-none px-7 rounded-full flex items-center justify-between"
+                style="border-color: #6B7280; border-width: 1px"
+              >
+                <label for="quantity" class="mr-3 text-black"
+                  >Antal deltagere*</label
+                >
+                <input
+                  type="number"
+                  id="quantity"
+                  class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-black focus:border-2 focus:border-[#7E2512]"
+                  value="0"
+                  min="0"
+                />
+              </div>
+            </div>
+
+            <div class="mb-4">
+              <div
+                class="bg-[#F3EFEA] border-none border-2 px-7 rounded-full flex items-center justify-between"
+                style="border-color: #6B7280; border-width: 1px"
+              >
+                <label for="quantity" class="mr-3 text-black">Slettet GB*</label
+                >
+                <input
+                  type="number"
+                  id="quantity"
+                  class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-black"
+                  value="0"
+                  min="0"
+                />
+              </div>
+            </div>
+
+            <div class="pt-4">
+              <label for="terms" class="inline-flex items-center">
+                <input
+                  type="checkbox"
+                  id="terms"
+                  class="rounded border-[#F3EFEA] focus:ring-0 text-[#7E2512]"
+                />
+                <span class="ml-2"
+                  >Jeg accepterer <u><a href="#">vilkårene</a></u>*</span
+                >
+              </label>
+            </div>
+
+            <div class="my-5">
+              <label for="newsletter" class="inline-flex items-center">
+                <input
+                  type="checkbox"
+                  id="newsletter"
+                  class="rounded border-[#F3EFEA] focus:border-2 focus:ring-0 text-[#7E2512]"
+                />
+                <span class="ml-2"
+                  >Jeg ønsker at tilmelde mig nyhedsbrevet fra World Cleanup Day</span
+                >
+              </label>
+            </div>
+
+            <div class="mb-5 flex justify-center pb-10 lg:p-5">
+              <Button variant="primary" size="large">Indsend</Button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
   </MainLayout>
 </body>
