--- a/src/components/Sektion3.astro
+++ b/src/components/Sektion3.astro
@@ -11,7 +11,7 @@ import elkædel from '../assets/images/elkædel.svg';
 ---
 
 <div class="bg-[D6D1BE] lg:pb-14 lg:pt-28 pt-14 mx-10">
-    <h2 class="text-[#7E2512] text-center lg:pb-10 text-3xl lg:text-5xl">Vidste du..?</h2>
+    <h2 class="text-[#7E2512] text-center lg:pb-10 text-3xl lg:text-5xl zoomIn">Vidste du..?</h2>
 
 <div class="grid grid-cols-2 pt-10 gap-6 text-[#7E2512] font-bold lg:grid-cols-4 lg:px-20 lg:gap-20 lg:pr-0">
     <div class="pb-8 text-sm lg:pb-4 lg:text-base">
@@ -57,4 +57,13 @@ import elkædel from '../assets/images/elkædel.svg';
 </div>
 </div>
 
+<script>
+	import {inView} from "motion";
+	const zoomIn = document.querySelector(".zoomIn");
+
+	inView(zoomIn, () => {
+		zoomIn.classList.add("animate__animated", "animate__zoomIn");
+	})
+
+</script>
 
