--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -239,6 +239,7 @@ import Button from "../components/Button.astro";
           >
         </p>
       </div>
+	</div>
 
       <!-- SEKTION 5 -->
       <section id="sektion5" class="w-full">
