--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Button from "../components/Button.astro";
     <article>
       <!-- Hero unit -->
       <section class="pt-52 lg:pt-32 lg:pb-32 bg-[#D6D1BE]">
-        <Hero />
+        <Hero />.
       </section>
 
       <!-- SEKTION 1 -->
